Updated User Manual with simplex gradient

--- a/scilab_doc/neldermead/method-neldermead.tex
+++ b/scilab_doc/neldermead/method-neldermead.tex
@@ -42,7 +42,7 @@ The vertices are sorted by increasing function values so that the
 \emph{best} vertex has index 1 and the \emph{worst} vertex 
 has index $n+1$
 \begin{eqnarray}
-\label{sorted-vertices-fv}
+\label{nm-sorted-vertices-fv}
 f_1 \leq f_2 \leq \ldots \leq f_n \leq f_{n+1}.
 \end{eqnarray}
 
@@ -54,7 +54,7 @@ The centroid of the simplex $\overline{\bx} (j)$ is the center of the vertices
 where the vertex $\bv_j$ has been 
 excluded. This centroid is 
 \begin{eqnarray}
-\label{centroid-generalized}
+\label{nm-centroid-generalized}
 \overline{\bx} (j) = 
 \frac{1}{n} \sum_{i=1,n+1, i\neq j} \bv_i.
 \end{eqnarray}
@@ -65,7 +65,7 @@ The algorithm attempts to replace some vertex
 $\bv_j$ by a new vertex $\bx(\rho,j)$ on the line from the vertex $\bv_j$
 to the centroid  $\overline{\bx}(j)$. The new vertex $\bx(\rho,j)$ is defined by 
 \begin{eqnarray}
-\label{interpolate-generalized}
+\label{nm-interpolate-generalized}
 \bx(\rho,j) = (1+\rho)\overline{\bx}(j) - \rho \bv_j.
 \end{eqnarray}
 
@@ -149,13 +149,13 @@ At each iteration, we compute the centroid
 $\overline{\bx} (n+1)$ where the worst vertex $\bv_{n+1}$ 
 has been excluded. This centroid is 
 \begin{eqnarray}
-\label{centroid-worst}
+\label{nm-centroid-worst}
 \overline{\bx} (n+1) = \frac{1}{n} \sum_{i=1,n} \bv_i.
 \end{eqnarray}
 We perform a reflection with respect to the worst vertex $\bv_{n+1}$,
 which creates the reflected point $\bx_r$ defined by 
 \begin{eqnarray}
-\label{interpolate-worst}
+\label{nm-interpolate-worst}
 \bx_r = \bx(\rho,n+1) = (1+\rho)\overline{\bx}(n+1) - \rho \bv_{n+1}
 \end{eqnarray}
 We then compute the function value of the reflected
@@ -752,7 +752,7 @@ coefficients.
 
 \emph{Outside contraction} \\
 If the outside contraction step is repeatedly performed
-with variable $\mu_{oc} \in }0,\mu_r[$, then 
+with variable $\mu_{oc} \in [0,\mu_r[$, then 
 \begin{eqnarray}
 \bv^{(k+n)} &=& \overline{\bold{v}}^{(k)} 
 + \mu_{oc} \left( \overline{\bold{v}}^{(k)} - \bv^{(k)}\right) \\
