--- a/scilab_doc/neldermead/method-spendley.tex
+++ b/scilab_doc/neldermead/method-spendley.tex
@@ -41,7 +41,7 @@ The vertices are sorted by increasing function values so that the
 \emph{best} vertex has index 1 and the \emph{worst} vertex 
 has index $n+1$
 \begin{eqnarray}
-\label{sorted-vertices-fv}
+\label{sp-sorted-vertices-fv}
 f_1 \leq f_2 \leq \ldots \leq f_n \leq f_{n+1}.
 \end{eqnarray}
 
@@ -54,7 +54,7 @@ The centroid of the simplex $\overline{\bx} (j)$ is the center of the vertices
 where the vertex $\bv_j$ has been 
 excluded. This centroid is 
 \begin{eqnarray}
-\label{centroid-generalized}
+\label{sp-centroid-generalized}
 \overline{\bx} (j) = \frac{1}{n} \sum_{i=1,n+1, i\neq j} \bv_i.
 \end{eqnarray}
 The algorithm makes use
@@ -64,7 +64,7 @@ The algorithm attempts to replace some vertex
 $\bv_j$ by a new vertex $\bx(\rho,j)$ on the line from the vertex $\bv_j$
 to the centroid  $\overline{\bx}(j)$. The new vertex $\bx(\rho,j)$ is defined by 
 \begin{eqnarray}
-\label{interpolate-generalized}
+\label{sp-interpolate-generalized}
 \bx(\rho,j) = (1+\rho)\overline{\bx}(j) - \rho \bv_j.
 \end{eqnarray}
 
@@ -106,13 +106,13 @@ At each iteration, we compute the centroid
 $\overline{\bx} (n+1)$ where the worst vertex $\bv_{n+1}$ 
 has been excluded. This centroid is 
 \begin{eqnarray}
-\label{centroid-worst}
+\label{sp-centroid-worst}
 \overline{\bx} (n+1) = \frac{1}{n} \sum_{i=1,n} \bv_i.
 \end{eqnarray}
 We perform a reflection with respect to the worst vertex $\bv_{n+1}$,
 which creates the reflected point $\bx_r$ defined by 
 \begin{eqnarray}
-\label{interpolate-worst}
+\label{sp-interpolate-worst}
 \bx_r = \bx(\rho,n+1) = (1+\rho)\overline{\bx}(n+1) - \rho \bv_{n+1}
 \end{eqnarray}
 
@@ -309,7 +309,7 @@ $\bx_0$ & $(2.0,2.0)$ \\
 Relative tolerance on simplex size & $10^{-8}$ \\
 Exact $\bx^\star$ & $(0.,0.)$\\
 Computed $\bx^\star$ & $(2.169e-10, 2.169e-10)$\\
-Exact $f(\b\bx^\star)$ & $0.$\\
+Exact $f(\bx^\star)$ & $0.$\\
 Computed $f(\bx^\star)$ & $4.706e-20$\\
 \hline
 \end{tabular}
