--- a/scilab_doc/neldermead/neldermead.bib
+++ b/scilab_doc/neldermead/neldermead.bib
@@ -509,3 +509,24 @@ PAGES  = {2928}
 	year = {1981}
 }
 
+@book{numericaloptimization,
+author = {Jorge Nocedal, Stephen J. Wright},
+title = {Numerical Optimization},
+year = {1999},
+publisher= {Springer}
+}
+
+@book{citeulike:2122238,
+	address = {Baltimore, MD, USA},
+	author = {Golub, Gene  H.  and Van Loan, Charles  F. },
+	citeulike-article-id = {2122238},
+	isbn = {0801854148},
+	keywords = {algebra, book, computation, numerical},
+	posted-at = {2008-03-30 22:15:25},
+	priority = {2},
+	publisher = {Johns Hopkins University Press},
+	title = {Matrix computations (3rd ed.)},
+	url = {http://portal.acm.org/citation.cfm?id=248979},
+	year = {1996}
+}
+
