--- a/scilab_doc/neldermead/introduction.tex
+++ b/scilab_doc/neldermead/introduction.tex
@@ -5,6 +5,8 @@ We present the main features of the \scifunction{neldermead} component, and
 show how to use the component with a simple example.
 
 \section{Overview}
+\index{Torczon, Virginia}
+\index{Wright, Margaret}
 
 The Nelder-Mead simplex algorithm \cite{citeulike:3009487}, published in 1965, is an enormously 
 popular search method for multidimensional unconstrained optimization. 
