--- a/scilab_doc/neldermead/macros.tex
+++ b/scilab_doc/neldermead/macros.tex
@@ -62,6 +62,7 @@
 
 % Scilab macros
 \newcommand{\scifunction}[1]{\textit{#1}}
+\newcommand{\scivar}[1]{\textit{#1}}
 
 % To highlight source code
 \usepackage{listings}
