--- a/scilab_doc/neldermead/method-neldermead.tex
+++ b/scilab_doc/neldermead/method-neldermead.tex
@@ -323,6 +323,9 @@ shrink steps are rare.
 
 \section{Convergence properties on a quadratic}
 
+\index{Han, Lixing}
+\index{Neumann, Michael}
+
 In this section, we reproduce one result 
 presented by Han and Neumann \cite{HanNeumann2006}, which states 
 the rate of convergence toward the optimum on a class of quadratic 
@@ -1034,6 +1037,8 @@ $10000.0$ & 167 & $3.0e-17$ & $(5.0e-11,-1.0e-10)$ \\
 \end{figure}
 
 \subsection{Sensitivity to dimension}
+\index{Han, Lixing}
+\index{Neumann, Michael}
 
 In this section, we try to reproduce the result 
 presented by Han and Neumann \cite{HanNeumann2006}, which shows that the 
@@ -1204,6 +1209,7 @@ depending on the number of variables}
 \end{figure}
 
 \subsection{O'Neill test cases}
+\index{O'Neill, R.}
 
 In this section, we present the results by O'Neill, who 
 implemented a fortran 77 version of the Nelder-Mead algorithm
@@ -1315,6 +1321,7 @@ Baudin & 4 & 999 & 0 & 5.91 e-9 & 676 & - \\
 
 \subsection{Convergence to a non stationnary point}
 \label{section-mcKinnon}
+\index{Mc Kinnon, K. I. M.}
 
 In this section, we analyze the Mc Kinnon counter example 
 from \cite{589109}. We show the behavior of the 
@@ -1532,6 +1539,7 @@ They also reveal that the Nelder-Mead method can generate simplices which collap
 into a degenerate simplex, by applying repeated inside contractions.
 
 \subsection{Torczon's numerical experiments}
+\index{Torczon, Virginia}
 
 In her Phd Thesis \cite{Torczon89multi-directionalsearch}, Virginia Torczon 
 presents the multi-directional direct search algorithm. In order to analyze the 
