--- a/scilab_doc/neldermead/method-spendley.tex
+++ b/scilab_doc/neldermead/method-spendley.tex
@@ -1,6 +1,9 @@
 \chapter{Spendley's et al. method}
+\index{Spendley, W.}
+\index{Hext, G. R.}
+\index{Himsworth, F. R.}
 
-In this chapter, we present Spendley's et al. algorithm \cite{Spendley1962} for 
+In this chapter, we present Spendley, Hext and Himsworth algorithm \cite{Spendley1962} for 
 unconstrained optimization.
 
 We begin by presenting a global overview of the algorithm. 
